--- a/video-player.html
+++ b/video-player.html
@@ -1723,8 +1723,8 @@
           "8": { link:'https://www.dropbox.com/scl/fi/2kz30t1t2cw5xwrlawc52/Hazbin-Hotel-T1-Cap-8.mp4?rlkey=2wde6yt3i9zrsgggbw00fqd4p&st=v6kz9xj7&raw=1', title:'Hazbin Hotel T1 Cap 8' },
         },
         "2": {
-          "1": { link:'https://www.dropbox.com/scl/fi/5crbs5vaqpiry1ci6x5pp/Hazbin-Hotel-T2-Cap-1.mp4?rlkey=cxtjwhfrkukyido7p1ru4zcu6&st=p1a4hsop&raw=1', title:'Hazbin Hotel T2 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/px0mfrisosrjcmdsaeipr/Hazbin-Hotel-T2-Cap-2.mp4?rlkey=gn0uc6mp6vozgv949b00p693f&st=iviazfz2&raw=1', title:'Hazbin Hotel T2 Cap 2' },
+          "1": { link:'https://www.dropbox.com/scl/fi/s3rm100j6bi647jramd1r/Hazbin-Hotel-T2-Cap-1.mp4?rlkey=0xv5hnfsqeo7ao226agxjxk2f&st=gis9sik5&raw=1', title:'Hazbin Hotel T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/acz9cphi61rzvdlkdz1uw/Hazbin-Hotel-T2-Cap-2.mp4?rlkey=hzhchz0y7qsb26rww62kzmlzc&st=h6doo23f&raw=1', title:'Hazbin Hotel T2 Cap 2' },
           "3": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 3' },
           "4": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 4' },
           "5": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 5' },
