--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@ header h1 {
       <option>Romance escolar</option>
       <option>Slice of Life</option>
       <option>Sobrenatural</option>
+      <option>Steampunk</option>
       <option>Superhéroes</option>
       <option>Survival Game</option>
       <option>Tentáculos</option>
@@ -706,9 +707,10 @@ header h1 {
       {id:42, title:"Los Diarios de la Boticaria", aliases: ["Kusuriya no Hitorigoto","The Apothecary Diaries"], img:"maomaot1.jpg", rating:4.9, genres:["Drama","Misterio","Romance","Shōjo"]},
       {id:43, title:"Maplestar", img:"pm.png", rating:5.0, genres:["Hentai","Animación","Seijin"]},
       {id:44, title:"Uzumaki", img:"uzumakii.jpg", rating:4.2, genres:["Horror","Seinen"]},
-      {id:45, title:"Tondemo Skill de Isekai Hourou Meshi", aliases: ["Campfire Cooking in Another World with My Absurd Skills"], img:"todemo.jpg", rating:4.9, genres:["Comedia","Fantasía","Slice of Life","Cocina","Aventura","Shōnen"]},
+      {id:45, title:"Tondemo Skill de Isekai Hourou Meshi", aliases: ["Campfire Cooking in Another World with My Absurd Skills"], img:"todemo.jpg", rating:4.9, genres:["Comedia","Fantasía","Slice of Life","Cocina","Aventura","Shōnen","Isekai"]},
       {id:46, title:"My Dress-Up Darling", aliases: ["Sono Bisque Doll wa Koi wo Suru"], img:"muneca.jpg", rating:4.9, genres:["Comedia","Romance","Slice of Life","Escolar","Cosplay","Seinen"]},
       {id:47, title:"Hazbin Hotel", aliases: ["Hotel Hazbin"], img:"hhzz.jpg", rating:4.8, genres:["Comedia","Musical","Drama","Animación","Policial","Seijin"]},
+      {id:48, title:"The Eminence in Shadow", aliases: ["Kage no Jitsuryokusha ni Naritakute!"], img:"shadow.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Isekai","Harem","Steampunk","Shōnen"]},
 
     ];
 
