--- a/anime-detail.html
+++ b/anime-detail.html
@@ -223,6 +223,8 @@
   <audio id="tondemo-ost" loop><source src="https://www.dropbox.com/scl/fi/z3nw0hlps4tjwqipc1axy/Tondemo-Skill-de-Isekai-Hourou-Meshi-Opening-Full-Luxury-Spoon-Van-de-Shop-Sub-Espa-ol-Latino.mp3?rlkey=vhlgiylxa9ej2tgy4q9wtf8vl&st=u7j9u5q1&raw=1" type="audio/mpeg"></audio>
   <audio id="muneca-ost" loop><source src="https://www.dropbox.com/scl/fi/arzidxum6qqn27x7o6mmb/MV-TV-anime-My-Dress-Up-Darling-Season-2-Opening-Theme.mp3?rlkey=cavkywi87u1cnli730obp0dee&st=p3y6xvxt&raw=1" type="audio/mpeg"></audio>
   <audio id="hazbin-ost" loop><source src="https://www.dropbox.com/scl/fi/04uebc7tvm3l3zejmt9jo/m1.mp3?rlkey=9yq3w6i0hqp5qbc2ujs28ab9p&st=2wugb0mz&raw=1" type="audio/mpeg"></audio>
+  <audio id="shadow1-ost" loop><source src="https://www.dropbox.com/scl/fi/bab2zrahhc8lqrvf0xz4m/The-Eminence-in-Shadow-Season-2-OP-Full-grayscale-dominator-Sub-Espa-ol-Romaji-AMV.mp3?rlkey=g0kdyoiamb5aric7kzrufetuk&st=bofhh779&raw=1" type="audio/mpeg"></audio>
+  <audio id="shadow2-ost" loop><source src="https://www.dropbox.com/scl/fi/wlfy3btt81oioawt6x3qo/The-Eminence-in-Shadow-Moonlight-Sonata-1st-Movement-Beethoven.mp3?rlkey=vcrmpxnlqnjjk6bt2nnqfpfif&st=u9m1yzem&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2679,7 +2681,49 @@
           }
         ]
       },
-
+      48: {
+        title: "The Eminence in Shadow",
+        desc: "Incluso en su vida pasada, el sueño de Cid no era convertirse en protagonista o jefe final. Prefiere pasar desapercibido como un personaje secundario hasta que sea el momento de máxima audiencia para revelar que es un autor intelectual… o al menos, hacer lo siguiente mejor: ¡pretender serlo! Y ahora que ha renacido en otro mundo, está listo para establecer las condiciones perfectas para vivir sus sueños al máximo. Armado con su imaginación hiperactiva, Cid recluta en broma miembros para su organización e inventa toda una historia de fondo sobre un culto malvado que deben acabar. Bueno, por suerte, estos adversarios imaginarios resultan ser reales, ¡y todos saben la verdad menos él!",
+        cover: "shadow.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/2bcwaknie7oqj2z1b9p0j/MV5BMDFmMWJlMWYtMDFkNi00OWViLTkzOGEtNDI0YWNmM2M5MzI5XkEyXkFqcGc-._V1_FMjpg_UX1000_.jpg?rlkey=ffw7z9iqf8mds8jczy2gx03x8&st=mdzhy17n&raw=1",
+            eps: [
+              { title: "The Eminence in Shadow T1 Cap 1"},
+              { title: "The Eminence in Shadow T1 Cap 2"},
+              { title: "The Eminence in Shadow T1 Cap 3"},
+              { title: "The Eminence in Shadow T1 Cap 4"},
+              { title: "The Eminence in Shadow T1 Cap 5"},
+              { title: "The Eminence in Shadow T1 Cap 6"},
+              { title: "The Eminence in Shadow T1 Cap 7"},
+              { title: "The Eminence in Shadow T1 Cap 8"},
+              { title: "The Eminence in Shadow T1 Cap 9"},
+              { title: "The Eminence in Shadow T1 Cap 10"},
+              { title: "The Eminence in Shadow T1 Cap 11"},
+              { title: "The Eminence in Shadow T1 Cap 12"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/nnot4umauq0sl5gcnupak/Sinopsis-de-The-Eminence-in-Shadow.jpg?rlkey=oea0l803qpxxrfl9huhxhrrop&st=r1v53adw&raw=1",
+            eps: [
+              { title: "The Eminence in Shadow T2 Cap 1"},
+              { title: "The Eminence in Shadow T2 Cap 2"},
+              { title: "The Eminence in Shadow T2 Cap 3"},
+              { title: "The Eminence in Shadow T2 Cap 4"},
+              { title: "The Eminence in Shadow T2 Cap 5"},
+              { title: "The Eminence in Shadow T2 Cap 6"},
+              { title: "The Eminence in Shadow T2 Cap 7"},
+              { title: "The Eminence in Shadow T2 Cap 8"},
+              { title: "The Eminence in Shadow T2 Cap 9"},
+              { title: "The Eminence in Shadow T2 Cap 10"},
+              { title: "The Eminence in Shadow T2 Cap 11"},
+              { title: "The Eminence in Shadow T2 Cap 12"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -2873,6 +2917,7 @@
         45: ['tondemo-ost'],
         46: ['muneca-ost'],
         47: ['hazbin-ost'],
+        48: ['shadow1-ost','shadow2-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
