--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2702,6 +2702,14 @@
               { title: "The Eminence in Shadow T1 Cap 10"},
               { title: "The Eminence in Shadow T1 Cap 11"},
               { title: "The Eminence in Shadow T1 Cap 12"},
+              { title: "The Eminence in Shadow T1 Cap 13"},
+              { title: "The Eminence in Shadow T1 Cap 14"},
+              { title: "The Eminence in Shadow T1 Cap 15"},
+              { title: "The Eminence in Shadow T1 Cap 16"},
+              { title: "The Eminence in Shadow T1 Cap 17"},
+              { title: "The Eminence in Shadow T1 Cap 18"},
+              { title: "The Eminence in Shadow T1 Cap 19"},
+              { title: "The Eminence in Shadow T1 Cap 20"},
             ]
           },
           {
